--- a/My Blog/Web.config
+++ b/My Blog/Web.config
@@ -69,6 +69,6 @@
     </handlers>
   </system.webServer>
 
-  <!-- 配置信息来源 -->
+  <!-- 配置信息来源1 -->
   <SsoConfig configSource="HfSso\Configs\Sso.config"/>
 </configuration>
